# spark-etl-pipeline

./: README.md  pyproject.toml
spark_etl_pipeline/: main.py
spark_etl_pipeline/config/: config.yaml
spark_etl_pipeline/data/: micro_user.csv  output.csv  stagnant_data.csv
spark_etl_pipeline/etl/: extractor.py  loader.py  pipeline.py  transformer.py  utils.py
tests/: test_pipeline.py
